Fixed some misaligned elements and added missing animations to some pages

--- a/css/style.css
+++ b/css/style.css
@@ -220,11 +220,11 @@ header {
 }
 
 .login-content{
+    text-align: center;
     width: 400px;
     margin-bottom: 150px;
     background-color: white;
     border-radius: 8px;
-    text-align: center;
     border-style: solid;
     border-color: var(--login-blue);
     border-width: 2px;
@@ -233,9 +233,10 @@ header {
 
 .close-button-container{
     height: 5px;
-    margin: 10px;
     float: right;
     position: relative;
+    top: 10px;
+    right: 10px;
 }
 
 .close-button-container a{
@@ -253,7 +254,6 @@ header {
 
 .login-content h1{
     font-size: 40px;
-    text-align: center;
     font-weight: normal;
     padding: 20px 0 0 0;
     color: darkblue;
@@ -289,16 +289,6 @@ form .txt_field{
 
 .txt_field label{
     position: absolute;
-    top: 60%;
-    left: 5px;
-    color: #adadad;
-    font-size: 16px;
-    pointer-events: none;
-    transition: 0.5s;
-}
-
-#signup .txt_field label{
-    position: absolute;
     top: 30%;
     left: 5px;
     color: #adadad;
@@ -321,7 +311,7 @@ form .txt_field{
 
 .txt_field input:focus ~ label,
 .txt_field input:valid ~ label{
-    top: -5px;
+    top: -15px;
     color: var(--login-blue)
 }
 
@@ -368,6 +358,9 @@ body > div > div.login-container > div {
 
 
 #signup {
+    border-top-style: solid;
+    border-width: 15px;
+    border-color: var(--login-blue);
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -388,7 +381,7 @@ body > div > div.login-container > div {
     overflow: hidden;
 }
 
-.register-content h1{
+#signup .register-content h1{
     font-size: 50px;
     text-align: center;
     font-weight: normal;
@@ -448,13 +441,40 @@ body > div > div.login-container > div {
 
 #signup .txt_field input:focus ~ label,
 #signup .txt_field input:valid ~ label{
-    top: -20px;
+    top: -15px;
     color: var(--login-blue)
 }
 
 #signup .txt_field input:focus ~ span::before,
 #signup .txt_field input:valid ~ span::before{
     width: 100%;
+}
+
+
+/*
+---------------------------------------------
+add_animal.php
+---------------------------------------------
+
+*/
+
+#signup-animal {
+    border-top-style: solid;
+    border-width: 15px;
+    border-color: var(--login-blue);
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-image: url(../assets/add_animal_bg.jpg);
+    background-size: cover;
+}
+
+#signup-animal .register-content h1{
+    font-size: 45px;
+    text-align: center;
+    font-weight: normal;
+    padding-top: 20px;
+    color: darkblue;
 }
 
 
